--- a/src/pageComponents/Home/components/Home/home.module.css
+++ b/src/pageComponents/Home/components/Home/home.module.css
@@ -6,13 +6,33 @@
 
 .left_side {
   width: 50%;
-  background-color: blue; 
+  position: relative;  
+  background-image: url('../../../../assets/img/main_bg.png'); 
+  background-repeat: no-repeat; 
+  background-position: center -100px; 
+  background-size: cover;  
+}
+
+.left_side__logo {
+  font-size: 1.7rem;
+  font-weight: bold;
+  position: absolute;
+  top: 20px; 
+  left: 30px;
+}
+
+.left_side__textBottom {
+  color: #fff;
+  position: absolute;
+  bottom: 30px; 
+  left: 30px;
+  font-weight: 500;  
 }
 
 
 .right_side {
   width: 50%;
-  background-color: red; 
+  background-color: red;  
 }
 
 
